src/mongo/db/query/query_tester/tests/selfTests/negativeTests/run_tests/bad_index.coll
{$firstN.obj: "no"}

{a: "document"}
